Fix dropdown menu styles for dark mode and some broken links

--- a/src/assets/sass/_cards.scss
+++ b/src/assets/sass/_cards.scss
@@ -13,6 +13,10 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  transition: 0.3s ease;
+  &:hover {
+    transform: translateY(-12px);
+  }
   &-container {
     width: 100%;
     display: grid;
